0.9.0/_sources/generated/statsmodels.genmod.bayes_mixed_glm.BinomialBayesMixedGLM.rst.txt
statsmodels.genmod.bayes_mixed_glm.BinomialBayesMixedGLM
========================================================

.. currentmodule:: statsmodels.genmod.bayes_mixed_glm

.. autoclass:: BinomialBayesMixedGLM

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~BinomialBayesMixedGLM.fit
    
    
      ~BinomialBayesMixedGLM.fit_map
    
    
      ~BinomialBayesMixedGLM.fit_vb
    
    
      ~BinomialBayesMixedGLM.from_formula
    
    
      ~BinomialBayesMixedGLM.logposterior
    
    
      ~BinomialBayesMixedGLM.logposterior_grad
    
    
      ~BinomialBayesMixedGLM.predict
    
    
      ~BinomialBayesMixedGLM.vb_elbo
    
    
      ~BinomialBayesMixedGLM.vb_elbo_base
    
    
      ~BinomialBayesMixedGLM.vb_elbo_grad
    
    
      ~BinomialBayesMixedGLM.vb_elbo_grad_base
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~BinomialBayesMixedGLM.endog_names
      ~BinomialBayesMixedGLM.exog_names
      ~BinomialBayesMixedGLM.rng
      ~BinomialBayesMixedGLM.verbose
   
   