v0.10.2/_sources/generated/statsmodels.genmod.bayes_mixed_glm.BinomialBayesMixedGLM.rst.txt
statsmodels.genmod.bayes\_mixed\_glm.BinomialBayesMixedGLM
==========================================================

.. currentmodule:: statsmodels.genmod.bayes_mixed_glm

.. autoclass:: BinomialBayesMixedGLM

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         BinomialBayesMixedGLM.fit
         BinomialBayesMixedGLM.fit_map
         BinomialBayesMixedGLM.fit_vb
         BinomialBayesMixedGLM.from_formula
         BinomialBayesMixedGLM.logposterior
         BinomialBayesMixedGLM.logposterior_grad
         BinomialBayesMixedGLM.predict
         BinomialBayesMixedGLM.vb_elbo
         BinomialBayesMixedGLM.vb_elbo_base
         BinomialBayesMixedGLM.vb_elbo_grad
         BinomialBayesMixedGLM.vb_elbo_grad_base



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         BinomialBayesMixedGLM.endog_names
         BinomialBayesMixedGLM.exog_names
         BinomialBayesMixedGLM.rng
         BinomialBayesMixedGLM.verbose

